atualizando meu codigo